infra-k8s/5-helm-charts/grafana/grafana-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
  labels:
    app.kubernetes.io/instance: grafana
    app.kubernetes.io/name: grafana
    app.kubernetes.io/version: 7.0.5
  name: grafana
  namespace: openstack
spec:
  rules:
  - host: lma.hanu-ci.io
    http:
      paths:
      - backend:
          serviceName: grafana-external
          servicePort: 80
        path: /
  tls:
  - hosts:
    - lma.hanu-ci.io
    secretName: hanu-certs
status:
  loadBalancer: {}
---
apiVersion: v1
kind: Service
metadata:
  name: grafana-external
  namespace: openstack
spec:
  type: ExternalName
  externalName: grafana.lma.svc.cluster.local
